# CSIRO_UNSW

./: README.md
Data_Analysis/: Aaron_first.ipynb  OWID_csv.ipynb  pyproject.toml
Data_Analysis/.ipynb_checkpoints/: Aaron_first-checkpoint.ipynb
Data_Analysis/etc/: aau_token
